WL-1010 quickfix for layout issue, should be coverd again in the final design polishing

--- a/app/styles/states/dhc/check.less
+++ b/app/styles/states/dhc/check.less
@@ -38,7 +38,7 @@ accordion.check .panel-heading a {
 }
 .check .question {
 
-  padding: 2em 0;
+  padding: 1em 0;
 
 
   .title:hover {
@@ -49,6 +49,7 @@ accordion.check .panel-heading a {
 
     display: inline-block;
     cursor: pointer;
+    margin-bottom: 0.5em;
 
     span {
       .header3();
